--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.1.4"
-indoc = "2.0.0"
+clap = "4"
+eyre = "0.6"
+indoc = "2"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.91"
-tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+serde_json = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
