--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 clap = "4"
 eyre = "0.6"
 indoc = "2"
+regex = "1.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
