--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ camino = { version = "1", features = ["serde1"] }
 clap = { version = "4", features = ["derive"] }
 eyre = "0.6"
 indoc = "2"
+mutants = "0.0.3"
 regex = "1.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
