--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ assert_fs = { version = "1.0", features = ["color", "color-auto"] }
 camino = { version = "1", features = ["serde1"] }
 clap = { version = "4", features = ["derive"] }
 eyre = "0.6"
+glob = "0.3.1"
 indoc = "2"
 mutants = "0.0.3"
 predicates = "3.0.3"
