--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ eyre = "0.6"
 glob = "0.3.1"
 mutants = "0.0.3"
 regex = "1.7"
+schemars = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
